更新至V3.0 Beta7，并且修复原版“虚拟终端”无法输入命令的问题